--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "eiows": "^3.6.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "redis": "^3.1.2",
     "socket.io": "^4.1.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
