--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "eiows": "^3.6.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "redis": "^3.1.2",
     "socket.io": "^4.1.2",
     "uuid": "^8.3.2",
